examples/errors/parsing/fun_simple-empty-body.cn
fun identity : Int -> Int [pure] = {
}

main : () [impure] = ()
